# google-personal-mcp

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  migration-google-personal-mcp.sh  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
dev_notes/changes/: 2026-02-01_08-19-35_bootstrap-integration-complete.md
docs/: AGENTS.md  README.md  claude-code-workflows.md  contributing.md  definition-of-done.md  mcp-implementation-guide.md  overview.md  templates.md  validation-guide.md
docs/system-prompts/: README.md  docscan.py
examples/: validate_server.py
planning/: 2026-01-27_23-53-21_plan-drive-file-operations-summary.md
scripts/: drive-tool.py
src/google_mcp_core/: auth.py  cli.py  config.py  context.py  drive.py  sheets.py
src/google_mcp_core/scripts/: drive_tool.py
src/google_personal_mcp/: __init__.py  server.py
tests/: __init__.py  test_server.py
