[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-personal-mcp"
version = "0.2.0"
description = "MCP server for personal Google Drive and Sheets access"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp",
    "google-api-python-client",
    "google-auth-oauthlib",
    "httpx",
    "cyclopts",
    "pydantic"
]

[project.scripts]
google-personal-mcp = "google_personal_mcp.server:main"
google-personal = "google_mcp_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]